illustrating with image

--- a/content/index.html
+++ b/content/index.html
@@ -5,8 +5,8 @@
 
 {# Markdown main content block. #}
 {% block content %}
-Hello World
-Bonjour 	ᕕ( ᐛ )ᕗ
+
+Hello/ Bonjour ᕕ( ᐛ )ᕗ
 ======================
 
 Welcome to my corner of the web! I'm Ismail Hrimech, a passionate Scala and Spark developer, dedicated to sharing what I've learned to support developers at every level in reaching their full potential. When I'm not immersed in the world of coding, you'll often find me with my family, hiking, or cuddling my cats. Let's code and conquer new heights together!
@@ -17,6 +17,7 @@ Transmettre ! ٩( ๑╹ ꇴ╹)۶
 
 [Me contacter par mail](mailto:ismail.hrimech@gmail.com)
 
+![Never say you're not ready to tackle whatever task you have!][2]
 
 Attributions:
 ------------
@@ -25,5 +26,6 @@ Attributions:
 
 [0]: https://unsplash.com/fr/photos/texte-multicolore-YlVjrBkfXt8?utm_content=creditShareLink&utm_medium=referral&utm_source=unsplash
 [1]: https://github.com/vincentbernat
+[2]: media/img/notready.jpg
 
 {% endblock %}
