--- a/deploy/index.html
+++ b/deploy/index.html
@@ -28,13 +28,12 @@
 </ul>
             </nav>
             <article id="content">
-                            <p>Hello World
-Bonjour     ᕕ( ᐛ )ᕗ
-======================</p>
+                            <h1>Hello/ Bonjour ᕕ( ᐛ )ᕗ</h1>
 <p>Welcome to my corner of the web! I'm Ismail Hrimech, a passionate Scala and Spark developer, dedicated to sharing what I've learned to support developers at every level in reaching their full potential. When I'm not immersed in the world of coding, you'll often find me with my family, hiking, or cuddling my cats. Let's code and conquer new heights together!</p>
 <p>Bienvenue sur mon espace en ligne ! Je suis Ismail Hrimech, un développeur passionné de Scala et Spark, dédié à la création de solutions élégantes et au partage des connaissances. Lorsque je ne suis pas sur mon poste de dev, vous me trouverez souvent à explorer les joies de la vie de famille, la randonnée et les petits câlins avec mes chats. Ce que j'aime le plus ? </p>
 <p>Transmettre ! ٩( ๑╹ ꇴ╹)۶</p>
 <p><a href="mailto:ismail.hrimech@gmail.com">Me contacter par mail</a></p>
+<p><img alt="Never say you're not ready to tackle whatever task you have!" src="media/img/notready.jpg" /></p>
 <h2>Attributions:</h2>
 <ul>
 <li><em>The <a href="https://unsplash.com/fr/photos/texte-multicolore-YlVjrBkfXt8?utm_content=creditShareLink&amp;utm_medium=referral&amp;utm_source=unsplash">photo</a> used for part of the background.</em></li>
