mobile version css

--- a/content/index.html
+++ b/content/index.html
@@ -23,9 +23,11 @@ Attributions:
 ------------
 - <em>The [photo][0] used for part of the background.</em>
 - <em>The [inspiration][1] came from vincentbernat</em>
+- <em>Favicon generation by [realfavicongenerator][3]</em>
 
 [0]: https://unsplash.com/fr/photos/texte-multicolore-YlVjrBkfXt8?utm_content=creditShareLink&utm_medium=referral&utm_source=unsplash
 [1]: https://github.com/vincentbernat
 [2]: media/img/notready.jpg
+[3]: https://realfavicongenerator.net/
 
 {% endblock %}
