--- a/deploy/index.html
+++ b/deploy/index.html
@@ -6,6 +6,13 @@
             <title>Ismail Hrimech: Coding Adventures of a Hiking Dev </title>
         <meta charset="utf-8" />
         <link rel="stylesheet" href="/media/css/style.css">
+        <link rel="apple-touch-icon" sizes="180x180" href="media/img/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="media/img/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="media/img/favicon-16x16.png">
+        <link rel="manifest" href="media/img/site.webmanifest">
+        <link rel="mask-icon" href="media/img/safari-pinned-tab.svg" color="#5bbad5">
+        <meta name="msapplication-TileColor" content="#da532c">
+        <meta name="theme-color" content="#ffffff">
     </head>
     <body>
         <main>
@@ -38,6 +45,7 @@
 <ul>
 <li><em>The <a href="https://unsplash.com/fr/photos/texte-multicolore-YlVjrBkfXt8?utm_content=creditShareLink&amp;utm_medium=referral&amp;utm_source=unsplash">photo</a> used for part of the background.</em></li>
 <li><em>The <a href="https://github.com/vincentbernat">inspiration</a> came from vincentbernat</em></li>
+<li><em>Favicon generation by <a href="https://realfavicongenerator.net/">realfavicongenerator</a></em></li>
 </ul>            </article>
 
                                 </main>
