--- a/deploy/advanced/sorter.html
+++ b/deploy/advanced/sorter.html
@@ -6,6 +6,13 @@
             <title>Ismail Hrimech: Coding Adventures of a Hiking Dev | Sorting</title>
         <meta charset="utf-8" />
         <link rel="stylesheet" href="/media/css/style.css">
+        <link rel="apple-touch-icon" sizes="180x180" href="media/img/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="media/img/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="media/img/favicon-16x16.png">
+        <link rel="manifest" href="media/img/site.webmanifest">
+        <link rel="mask-icon" href="media/img/safari-pinned-tab.svg" color="#5bbad5">
+        <meta name="msapplication-TileColor" content="#da532c">
+        <meta name="theme-color" content="#ffffff">
     </head>
     <body>
         <main>
@@ -65,17 +72,31 @@ all advanced topics.</p>
 <ul>
 <li>[] .DS_Store</li>
 <li>[] .DS_Store</li>
+<li>[] .DS_Store</li>
 <li>[CSS] style.css</li>
 <li>[HTML] profilage-visual-vm.html</li>
-<li>[HTML] index.html</li>
 <li>[HTML] tagger.html</li>
 <li>[HTML] grouper.html</li>
 <li>[HTML] overview.html</li>
+<li>[HTML] index.html</li>
 <li>[HTML] sorter.html</li>
 <li>[HTML] scala-training.html</li>
 <li>[HTML] spark-training.html</li>
 <li>[HTML] contact.html</li>
+<li>[ICO] favicon.ico</li>
+<li>[JPG] notready.jpg</li>
+<li>[PNG] favicon-16x16.png</li>
+<li>[PNG] favicon-32x32.png</li>
+<li>[PNG] mstile-150x150.png</li>
+<li>[PNG] apple-touch-icon.png</li>
+<li>[PNG] android-chrome-192x192.png</li>
+<li>[PNG] android-chrome-256x256.png</li>
+<li>[PNG] favicon.png</li>
+<li>[PNG] logo.png</li>
 <li>[PNG] background-50.png</li>
+<li>[SVG] safari-pinned-tab.svg</li>
+<li>[WEBMANIFEST] site.webmanifest</li>
+<li>[XML] browserconfig.xml</li>
 <li>[YAML] meta.yaml</li>
 <li>[YAML] meta.yaml</li>
 </ul>
