--- a/deploy/contact.html
+++ b/deploy/contact.html
@@ -6,11 +6,11 @@
             <title>Ismail Hrimech: Coding Adventures of a Hiking Dev </title>
         <meta charset="utf-8" />
         <link rel="stylesheet" href="/media/css/style.css">
-        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-        <link rel="manifest" href="/site.webmanifest">
-        <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+        <link rel="apple-touch-icon" sizes="180x180" href="media/img/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="media/img/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="media/img/favicon-16x16.png">
+        <link rel="manifest" href="media/img/site.webmanifest">
+        <link rel="mask-icon" href="media/img/safari-pinned-tab.svg" color="#5bbad5">
         <meta name="msapplication-TileColor" content="#da532c">
         <meta name="theme-color" content="#ffffff">
     </head>
@@ -35,8 +35,13 @@
 </ul>
             </nav>
             <article id="content">
-                            <p>Contact
- ======================</p>
+                            <h1>Contact</h1>
+<ul>
+<li><strong>mail</strong>: <a href="mailto:ismail.hrimech@gmail.com">ismail.hrimech@gmail.com</a></li>
+<li><strong>Code</strong>: <a href="https://github.com/ihrimech">GitHub</a></li>
+<li><strong>Social</strong>: <a href="https://www.linkedin.com/in/ismail-hrimech-a677b164/">LinkedIn</a></li>
+<li><strong>Location</strong>: Paris, France (Mobile in Europe)/ Remote</li>
+</ul>
 <p>Bienvenue sur la plateforme d'Ismail ! Passionné par Scala et Spark, je m'engage à partager mon expertise pour aider chacun à exploiter pleinement ces technologies dynamiques.</p>
 <p>Avec 10 ans d'expérience en développement logiciel, dont 7 ans spécialisés en Scala et Spark, j'ai acquis une solide maîtrise de ces outils tout en les enseignant à d'autres.</p>
 <p>En tant que formateur, je privilégie des expériences d'apprentissage captivantes et pratiques, combinant connaissances théoriques approfondies et applications pratiques pour une compréhension réelle des concepts.</p>
@@ -45,13 +50,7 @@
 <p>Welcome to Ismail's corner of the web! I'm passionate about Scala and Spark, and I'm dedicated to sharing my expertise and helping others unlock their potential in these exciting technologies.</p>
 <p>With 10 years of experience in software development, including 7 years specializing in Scala and Spark, I've had the privilege of working on a wide range of projects and honing my skills in these powerful frameworks. Throughout my journey, I've discovered the joy of not only mastering these technologies but also teaching others to do the same.</p>
 <p>As a trainer, I believe in creating engaging and practical learning experiences that empower students to thrive in their endeavors. My approach combines comprehensive theoretical knowledge with hands-on practice, ensuring that students not only understand the concepts but also feel confident applying them in real-world scenarios.</p>
-<p>Whether your organization seeks to enhance the skills of seasoned developers or empower newcomers to dive into Scala and Spark, I'm here to support your training initiatives every step of the way. With my extensive experience and passion for teaching, I'm committed to delivering engaging and effective training programs tailored to your organization's needs. Let's work together to unlock the full potential of Scala and Spark for your team!</p>
-<ul>
-<li><strong>mail</strong>: <a href="mailto:ismail.hrimech@gmail.com">ismail.hrimech@gmail.com</a></li>
-<li><strong>Code</strong>: <a href="https://github.com/ihrimech">GitHub</a></li>
-<li><strong>Social</strong>: <a href="https://www.linkedin.com/in/ismail-hrimech-a677b164/">LinkedIn</a></li>
-<li><strong>Location</strong>: Paris, France (Mobile in Europe)/ Remote</li>
-</ul>            </article>
+<p>Whether your organization seeks to enhance the skills of seasoned developers or empower newcomers to dive into Scala and Spark, I'm here to support your training initiatives every step of the way. With my extensive experience and passion for teaching, I'm committed to delivering engaging and effective training programs tailored to your organization's needs. Let's work together to unlock the full potential of Scala and Spark for your team!</p>            </article>
 
                                 </main>
     </body>
