--- a/deploy/index.html
+++ b/deploy/index.html
@@ -3,7 +3,7 @@
     <head>
         <link href="http://fonts.googleapis.com/css?family=Anton"
             rel="stylesheet" type="text/css">
-            <title>Ismail Hrimech: Coding Adventures of a Hiking Dev </title>
+            <title>Ismail Hrimech: Coding Adventures of a Hiking Dev | Scala Training (FR and EN)</title>
         <meta charset="utf-8" />
         <link rel="stylesheet" href="/media/css/style.css">
         <link rel="apple-touch-icon" sizes="180x180" href="media/img/apple-touch-icon.png">
