--- a/deploy/spark-training.html
+++ b/deploy/spark-training.html
@@ -6,11 +6,11 @@
             <title>Ismail Hrimech: Coding Adventures of a Hiking Dev | Spark Training (FR and EN)</title>
         <meta charset="utf-8" />
         <link rel="stylesheet" href="/media/css/style.css">
-        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-        <link rel="manifest" href="/site.webmanifest">
-        <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+        <link rel="apple-touch-icon" sizes="180x180" href="media/img/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="media/img/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="media/img/favicon-16x16.png">
+        <link rel="manifest" href="media/img/site.webmanifest">
+        <link rel="mask-icon" href="media/img/safari-pinned-tab.svg" color="#5bbad5">
         <meta name="msapplication-TileColor" content="#da532c">
         <meta name="theme-color" content="#ffffff">
     </head>
