--- a/deploy/advanced/grouper.html
+++ b/deploy/advanced/grouper.html
@@ -3,7 +3,7 @@
     <head>
         <link href="http://fonts.googleapis.com/css?family=Anton"
             rel="stylesheet" type="text/css">
-            <title>Ismail Hrimech: Coding Adventures of a Hiking Dev | Grouping</title>
+            <title>Ismail Hrimech: Coding Adventures of a Hiking Dev | Grouping test</title>
         <meta charset="utf-8" />
         <link rel="stylesheet" href="/media/css/style.css">
         <link rel="apple-touch-icon" sizes="180x180" href="media/img/apple-touch-icon.png">
@@ -30,7 +30,7 @@
                 <ul class="advanced hidden">
     <li><a href="/advanced/overview.html">Advanced topics</a></li>
     <li><a href="/advanced/sorter.html">Sorting</a></li>
-    <li><a class="selected" href="/advanced/grouper.html">Grouping</a></li>
+    <li><a class="selected" href="/advanced/grouper.html">Grouping test</a></li>
     <li><a href="/advanced/tagger.html">Tagging</a></li>
 </ul>
             </nav>
